fix: disappear extra header links on small screens

--- a/girder_wholetale/web_client/stylesheets/header.styl
+++ b/girder_wholetale/web_client/stylesheets/header.styl
@@ -1,26 +1,27 @@
-body {
-  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif !important;
-}
+body
+  font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif !important
 
-.g-header-wrapper {
-    background-color: #132f43;
-}
+.g-header-wrapper
+  background-color: #132f43
 
-.g-header-wrapper a {
-    color: #ffffff;
-}
+.g-header-wrapper
+  a
+    color: #ffffff
 
-.g-dashboard-link {
-    font-size: 15px;
-    margin-left: 20px;
-    vertical-align: bottom;
-    line-height: 52px;
-    display: inline;
-}
+.g-dashboard-link
+  font-size: 15px
+  margin-left: 20px
+  vertical-align: top
+  line-height: 52px
+  display: inline
 
-.g-app-logo {
-    width: 1.5em;
-    margin-right: 0.5rem;
-    vertical-align: middle;
-    display: inline-block;
-}
+.g-app-logo
+  width: 1.5em
+  margin-right: 0.5rem
+  vertical-align: middle
+  display: inline-block
+
+@media screen and (max-width: 720px)
+  .g-dashboard-link,
+  .g-app-logo
+    display: none
